# pybind11-project-template

./: .gitignore  CMakeLists.txt  README.md  profile.py  setup.py
pyboo/: __init__.py  interval.py  intervalset.py
src/: interval.cpp  interval.hpp  intervalset.cpp  intervalset.hpp  main_tests.cpp  python_binder.cpp  test_cboo.cpp
tests/: test_boopyb.py  test_pyboo.py  test_valhalla.py
valhalla/: __init__.py  intervalset.py
